# glCompact

./: .gitignore  CMakeLists.txt  Doxyfile.in  FindglCompact.cmake  LICENSE  NOTES.txt  README.md
cmake_modules/: FindDbgHelp.cmake  FindGLM.cmake
examples/: Framework.hpp  FrameworkGLFW.hpp  FrameworkSDL2.hpp  FrameworkSFML.hpp
examples/triangle/: CMakeLists.txt  main.cpp
examples/triangle/include/glCompact/: config.hpp
examples/triangle_es/: CMakeLists.txt  main.cpp
examples/triangle_es/cmake_modules/: FindGLM.cmake  FindglCompact.cmake
examples/triangle_gles/: CMakeLists.txt  main.cpp
examples/triangle_gles/include/glCompact/: config.hpp
glFileGenerator/: CMakeLists.txt
glFileGenerator/cmake_modules/: Findtinyxml2.cmake
glFileGenerator/src/: glFileGenerator.cpp
glFileGeneratorRescources/: coreExtensionList.txt  downloadXmlSpec  featureInfoList.txt
include/glCompact/: AttributeFormat.hpp  AttributeLayout.hpp  AttributeLayoutStates.hpp  AttributeLayout_.hpp  BlendEquation.hpp  BlendEquations.hpp  BlendFactorA.hpp  BlendFactorRgb.hpp  BlendFactors.hpp  Buffer.hpp  BufferCpu.hpp  BufferGpu.hpp  BufferGpuSparse.hpp  BufferGpuVirtual.hpp  BufferInterface.hpp  BufferMapped.hpp  BufferSparse.hpp  BufferStaging.hpp  CastAnyPtr.hpp  CompareOperator.hpp  Config.hpp  Context.hpp  ContextGroup.hpp  ContextGroupInfo.hpp  ContextGroup_.hpp  ContextScope.hpp  Context_.hpp  Debug.hpp  FaceSelection.hpp  Feature.hpp  Fence.hpp  Frame.hpp  GlTools.hpp  GlVersion.hpp  GlesVersion.hpp  IndexType.hpp  Info.hpp  MacroDefineBitOperatorsForType.hpp  MemoryBarrier.hpp  MemorySurfaceFormat.hpp  (+51 more)
include/glCompact/gl/: Constants.hppToGenerate  Constants.hppToGenerate.pyt  ConstantsCustom.hpp  Extensions.hppToGenerate  Extensions.hppToGenerate.pyt  Functions.hppToGenerate  Functions.hppToGenerate.pyt  FunctionsTypedef.hppToGenerate  FunctionsTypedef.hppToGenerate.pyt  Helper.hpp  Types.hpp  Values.hpp  Version.hpp
src/glCompact/: AttributeFormat.cpp  AttributeLayout.cpp  AttributeLayout_.cpp  Buffer.cpp  BufferCpu.cpp  BufferGpu.cpp  BufferGpuSparse.cpp  BufferGpuVirtual.cpp  BufferInterface.cpp  BufferMapped.cpp  BufferSparse.cpp  BufferStaging.cpp  Context.cpp  ContextGroup.cpp  ContextGroup.hpp  ContextGroupInfo.hpp  ContextGroup_.cpp  ContextScope.cpp  Context_.cpp  Debug.cpp  Fence.cpp  Frame.cpp  GlTools.cpp  MemoryBarrier.cpp  MemorySurfaceFormat.cpp  MultiMalloc11.cpp  MultiNew11.cpp  PipelineCompute.cpp  PipelineInterface.cpp  PipelineRasterization.cpp  RenderBuffer2d.cpp  RenderBuffer2dMultisample.cpp  RenderBufferInterface.cpp  Sampler.cpp  SurfaceFormat.cpp  SurfaceInterface.cpp  SurfaceSelector.cpp  Sync.cpp  Texture1d.cpp  Texture1dArray.cpp  (+22 more)
src/glCompact/gl/: Extensions.cppToGenerate  Extensions.cppToGenerate.pyt  Functions.cppToGenerate  Functions.cppToGenerate.pyt  Helper.cpp
